Moved code to python file

--- a/notebooks/test_cylindrical_correction_with_fits.ipynb
+++ b/notebooks/test_cylindrical_correction_with_fits.ipynb
@@ -538,37 +538,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def inhomogeneous_correction(x=-1, inner_circle_r=1, outer_circle_r=1):\n",
-    "    r = np.abs(x)\n",
-    "    if r >= outer_circle_r:\n",
-    "        return 0\n",
-    "    elif (r >= inner_circle_r) and (r <= outer_circle_r):\n",
-    "        return 2*outer_circle_r*np.sin(np.arccos(x/outer_circle_r))\n",
-    "    else:\n",
-    "        rp1 = 2*inner_circle_r*np.sin(np.arccos(x/inner_circle_r))\n",
-    "        rp2 = 2*outer_circle_r*np.sin(np.arccos(x/outer_circle_r))\n",
-    "        rp = rp2 - rp1\n",
-    "        return rp\n",
-    "    \n",
-    "def factor_inho(x=0, inner_circle_r=1, outer_circle_r=1):\n",
-    "    _value = inhomogeneous_correction(x=x, \n",
-    "                                      inner_circle_r=inner_circle_r, \n",
-    "                                      outer_circle_r=outer_circle_r)\n",
-    "    if x == 0:\n",
-    "        return 1\n",
-    "    if _value == 0:\n",
-    "        _value = np.NaN\n",
-    "    return (2*(outer_circle_r-inner_circle_r)/_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
     "collapsed": false,
@@ -603,8 +572,7 @@
     "    _slice = truncated_image[_h, :]\n",
     "    for _index, _x in enumerate(np.arange(-outer_radius, outer_radius+1)):\n",
     "        _input_data = _slice[_index]\n",
-    "#        _coeff = geometry_correction.inhomogeneous_correction(x=_x, inner_circle_r=inner_radius, outer_circle_r=outer_radius)\n",
-    "        _coeff = factor_inho(x=_x, inner_circle_r=inner_radius, outer_circle_r=outer_radius)\n",
+    "        _coeff = geometry_correction.factor_inho(x=_x, inner_circle_r=inner_radius, outer_circle_r=outer_radius)\n",
     "        _corrected_value = (_input_data * _coeff) / pixel_intensity\n",
     "        _expected_slice.append(_corrected_value)\n",
     "    corrected_image[_h, :] = _expected_slice\n",
@@ -715,14 +683,6 @@
    "source": [
     "output_file_name = 'data/corrected_inhomogeneous_image.fits'\n",
     "file_handler.make_fits(filename=output_file_name, data=inhomogeneous_image)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# References\n",
-    "\n"
    ]
   }
  ],
