--- a/notebooks/step2_normalize_data_by_first_image.ipynb
+++ b/notebooks/step2_normalize_data_by_first_image.ipynb
@@ -7,7 +7,10 @@
     "# Table of Contents\n",
     "* [Description](#Description)\n",
     "* [Import Python Modules](#Import-Python-Modules)\n",
-    "* [Select Data Set](#Select-Data-Set)\n"
+    "* [Select Output Folder](#Select-Output-Folder)\n",
+    "* [Select Data to Normalized](#Select-Data-to-Normalized)\n",
+    "* [Select File to Divide by all the Other Images](#Select-File-to-Divide-by-all-the-Other-Images)\n",
+    "* [Normalize and Export Data](#Normalize-and-Export-Data)\n"
    ]
   },
   {
@@ -21,11 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, the user will have to select a set of data to normalized. \n",
-    "\n",
-    "Then data will be normalized by either:\n",
-    "    - dividing each image by a given file\n",
-    "    - using a set of OB files"
+    "In this notebook, the user will have to select a set of data to **normalized** and all the images will be **divided by a specify image** (by default the first one loaded)"
    ]
   },
   {
@@ -301,22 +300,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "# Select Data and OBs "
+    "%gui qt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data"
+    "# Select Output Folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -324,53 +327,82 @@
    "source": [
     "root_folder = config_handler.load_config(key = 'root_folder', \\\n",
     "                                         default_value = '/Volumes/Buffalo/IPTS/IPTS-16413/raw/radiographs/')\n",
-    "list_files = gui_widgets.gui_fname(dir=root_folder, message=\"Select Images ...\", ext=\"tiff\")\n",
-    "if list_files:\n",
-    "    config_handler.save_config(key='root_folder', value=os.path.dirname(list_files[0]))"
+    "output_folder = config_handler.load_config(key='output_folder',\n",
+    "                                          default_value = root_folder)\n",
+    "output_folder = gui_widgets.gui_dname(dir=output_folder, message='Select Output Folder ....')\n",
+    "if output_folder:\n",
+    "    config_handler.save_config(key='output_folder', value=output_folder)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## OBs"
+    "# Select Data to Normalized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "list_files_to_normalized = gui_widgets.gui_fname(dir=root_folder, message=\"Select Images ...\", ext=\"tiff\")\n",
+    "if list_files_to_normalized:\n",
+    "    config_handler.save_config(key='root_folder', value=os.path.dirname(list_files_to_normalized[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Select File to Divide by all the Other Images"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "with_ob_widget = widgets.RadioButtons(options=['Yes','No'],\n",
-    "                               description=\"OBs ?\")\n",
-    "display(with_ob_widget)"
+    "denominator_file = gui_widgets.gui_fname(dir=root_folder, message=\"Select File to Divide by ...\", ext=\"tiff\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Normalize and Export Data "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Volumes/Buffalo/IPTS/IPTS-16413/raw/ob/20161208_OB40_0040_0013.tiff\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if with_ob_widget.value == 'Yes':\n",
-    "    ob_folder = config_handler.load_config(key = 'ob_folder', \\\n",
-    "                                         default_value = root_folder)\n",
-    "    list_ob_files = gui_widgets.gui_fname(dir=ob_folder, message=\"Select OBs ...\", ext=\"tiff\")\n",
-    "    if list_ob_files:\n",
-    "        config_handler.save_config(key='ob_folder', value=os.path.dirname(list_ob_files[0]))"
+    "# read files\n",
+    "data_to_normalized = file_handler.read_tiff(list_files_to_normalized)\n",
+    "data_denominator = file_handler.read_tiff(denominator_file)\n",
+    "\n",
+    "# perform normalization\n",
+    "data_normalized = []\n",
+    "for _data in data_to_normalized:\n",
+    "    data_normalized.append(_data / data_denominator[0])\n",
+    "    \n",
+    "# export data\n",
+    "for _index, _file in enumerate(list_files_to_normalized):\n",
+    "    _export_file = os.path.join(output_folder, os.path.basename(_file))\n",
+    "    file_handler.write_tiff(filename=_export_file, data=data_normalized[_index])"
    ]
   },
   {
